--- a/source/facebooklikepage.css
+++ b/source/facebooklikepage.css
@@ -1,3 +1,7 @@
 .fb-like-div, .fb-like-wrapper#imgBeforeLike {
 	display: none !important;
 }
+
+body[scroll] div.mainDiv {
+	overflow-y: scroll;
+}
